--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,6 @@
             <url>http://repo1.maven.org/maven2</url>
         </repository>
         <repository>
-            <id>custom</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repository.ops4j.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
             <id>neo4j-public-repository</id>
             <name>Publically available Maven 2 repository for Neo4j</name>
             <url>http://m2.neo4j.org</url>
@@ -42,31 +33,30 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-rdf-sail</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <groupId>com.tinkerpop.blueprints</groupId>
+            <artifactId>blueprints-neo4j-graph</artifactId>
+            <version>0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tinkerpop.blueprints</groupId>
+            <artifactId>blueprints-graph-sail</artifactId>
+            <version>0.8</version>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-repository-sail</artifactId>
-            <version>2.4.0</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-rio-rdfxml</artifactId>
-            <version>2.4.0</version>
-        </dependency>
-                <dependency>
-            <groupId>org.openrdf.sesame</groupId>
-            <artifactId>sesame-queryparser-sparql</artifactId>
-            <version>2.4.0</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-rdf-sparql</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-queryparser-sparql</artifactId>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
-
 
 </project>
