--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,22 @@
     <artifactId>neo4j-sail-test</artifactId>
     <version>1.0</version>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.1</version>
+                <configuration>
+                    <mainClass>be.datablend.sailtest.Test</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+
     <repositories>
         <repository>
             <id>central</id>
@@ -23,47 +39,36 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-<<<<<<< HEAD
-        
-=======
-        <repository>
-            <id>aduna-repo</id>
-            <name>Aduna repository</name>
-            <url>http://repo.aduna-software.org/maven2/releases</url>
-        </repository>
->>>>>>> f1b91d3066704e82473835a3488e7720e5be49bf
     </repositories>
+
+
 
     <dependencies>
         <dependency>
             <groupId>com.tinkerpop.blueprints</groupId>
             <artifactId>blueprints-neo4j-graph</artifactId>
-            <version>0.8</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>com.tinkerpop.blueprints</groupId>
             <artifactId>blueprints-graph-sail</artifactId>
-            <version>0.8</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-repository-sail</artifactId>
-            <version>2.3.2</version>
+            <version>2.7.12</version>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-rio-rdfxml</artifactId>
-            <version>2.3.2</version>
+            <version>2.7.12</version>
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-queryparser-sparql</artifactId>
-            <version>2.3.2</version>
+            <version>2.7.12</version>
         </dependency>
     </dependencies>
 
-<<<<<<< HEAD
 </project>
-=======
-</project>
->>>>>>> f1b91d3066704e82473835a3488e7720e5be49bf
